--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "jest",
+    "test": "runtime-prep-Azure.spec.ts",
     "start": "ts-node index.ts"
   },
   "author": "",
