--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^27.0.3",
     "@types/uuid": "^8.3.3",
     "express": "^4.17.2",
+    "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
